--- a/Nzela_ya_kopekisa_zemi.mw
+++ b/Nzela_ya_kopekisa_zemi.mw
@@ -8,3 +8,6 @@ Nzela ya kuzua 'emergency contraception' yango oyo:
 * Okoki kokende na [[doktolo]]
 * Okoki kokende na bato ya [[kobongisa fami]]
 * Okoki kuzua yango epayi ya [[pharmacie]] basusu kasi okofuta
+
+[[Category:Móngana]]
+[[Category:Nzoto kolongono]]
