--- a/Ngaliéma.mw
+++ b/Ngaliéma.mw
@@ -33,3 +33,5 @@ La commune accueille par ailleurs le [[palais de Marbre]], ancienne résidence p
 *[http://home.scarlet.be/~godfr123/cartes/carte_leopoldville_1954.jpg Carte de Léopoldville] (1954)
 {{CommunesKinshasa}}
 [[fr:Ngaliema]]
+
+[[Category:Ba komini ya Kinshasa]]
