--- a/Ndenge_ya_Misala.mw
+++ b/Ndenge_ya_Misala.mw
@@ -34,3 +34,5 @@ mpe adjali mokolo ya bisika (bisika ya kotika bana adjali na ba ndako ya batu). 
 Mosala “oyo ya bai Mboka” esungami na mbula matali mpe elukaka na yango kosala misolo mpo na yango te; lisanga ya batambwisi oyo esalami na baboti mpe na baoyo bafandi na nzinga nzinga yango nde kotala makambo nyonso.
 Misala “oyo ya bai mboka” na motuya ya malamu koleka “oyo ya ba kompani to ya mot ye
 moko”
+
+[[Category:Boteyi]]
