--- a/Mónganga-mǐno.mw
+++ b/Mónganga-mǐno.mw
@@ -6,4 +6,5 @@ Nzela ya kozua dentist yango oyo:
 * Kende yo moko okoma kombo nayo
 
 
-[[category:Maladi]]
+[[Category:Móngana]]
+[[Category:Nzoto kolongono]]
