--- a/Molɔngɔ́_ya_bisé_ya_mokili.mw
+++ b/Molɔngɔ́_ya_bisé_ya_mokili.mw
@@ -1,5 +1,5 @@
 {{Ndámbo}}
-[[category:Bisé]]
+[[category:Bisé ya Mokili]]
 
 === A ===
 [[Afganistani]] - [[Aljeria]] - [[Alémani]] - [[Al Mamlaká al-Maghribiya]] (Maroc) - [[Angóla]]
