--- a/Mbuma.mw
+++ b/Mbuma.mw
@@ -12,3 +12,6 @@ La liste des fruits n'est que temporairement ici. Elle sera éffacé d'ici peu. 
 
 == L ==
 [[likemba]] [[língoló]]
+
+[[Category:Zardɛ]]
+[[Category:Boyebi milona]]
