--- a/Gombe_(Kinsásá).mw
+++ b/Gombe_(Kinsásá).mw
@@ -40,3 +40,4 @@ Sites de quelques institutions établie à Gombe
 [[Category:Bakomini ya Kinshasa]]
 
 {{CommunesKinshasa}}
+[[fr:La Gombe (Kinshasa)]]
