--- a/Gombe_(Kinsásá).mw
+++ b/Gombe_(Kinsásá).mw
@@ -13,7 +13,7 @@ ProvIII=[[Kinshasa (province Constitution 2005)|Kinshasa]]
 
 [[image:Kinshasa gombe 2001.jpg|thumb|La Gombe]]
 
-'''La Gombe''' tǒ mpé '''Gombe''' ezalí [[komini]] na Nor ya Engumba-Etuka [[Kinshasa]]. Esúkí na ebale [[Kɔ́ngɔ (ebale)|Kɔ́ngɔ]] na Nor, mpé na [[boulevale ya 30 juin]] na Sudi.
+'''La Gombe''' tǒ mpé '''Gombe''' ezalí [[komini]] na [[Nor]] ya Engumba-Etuka [[Kinshasa]]. Esúkí na ebale [[Kɔ́ngɔ (ebale)|Kɔ́ngɔ]] na Nor, mpé na [[boulevale ya 30 yuni]] na [[Sudi]].
 
 == Tála mpé ==
 
