--- a/Bandalúngwa.mw
+++ b/Bandalúngwa.mw
@@ -24,3 +24,5 @@ ProvIII=[[Kinshasa (province Constitution 2005)|Kinshasa]]
 {{BakominiKinshasa}}
 [[Category:BaKomini ya Kinshasa]]
 {{ndambo}}
+[[en:Bandalungwa]]
+[[fr:Bandalungwa]]
