--- a/Lingála.mw
+++ b/Lingála.mw
@@ -3,7 +3,7 @@
 [[Image:Lingala-pn.jpg|thumb|texte manquant pour exemple de langue.]]
 [[Image:Map_-_DR_Congo,_major_languages.png|thumb|texte manquant pour exemple de langue.]]
 
-'''Lingála''' ezali [[lokótá]] na bato na [[Kɔ́ngɔ-Brazzaville]] mpé [[Kɔ́ngɔ-Kinshasa]].
+'''Lingála''' ezalí [[lokótá]] ya bato ba [[Kɔ́ngɔ-Brazzaville]] mpé ba [[Kɔ́ngɔ-Kinshasa]].
 
 === [[Moleli|Baleli]] ===
 {| border=1 cellspacing=0 cellpadding=2 style="text-align:center; border-collapse:collapse;"
