*Empty MediaWiki Message*

--- a/Alémani_(bokokani).mw
+++ b/Alémani_(bokokani).mw
@@ -1,5 +1,5 @@
 {{Bokokani}}
 
-* [[Alémani]] Bisé ya Eropa
-* [[Lialemani]] Lokótá
-*
+* [[Alémani]] - bisé ya [[Eropa]]
+* [[Balémani]] - ekólo ya Alémani
+* [[Lialemani]] - lokótá ya [[Alémani]], [[Swisi]], [[Bɛ́ljika]], ...
