[[Bɛ́ljiki]] ([[Eropa]])

--- a/Tatá-mokonzi_ya_Kɔ́ngɔ_Demokratiki.mw
+++ b/Tatá-mokonzi_ya_Kɔ́ngɔ_Demokratiki.mw
@@ -3,7 +3,7 @@
 [[Category:Kongo Demokratiki (Tata-mokonzi)]]
 [[Category:moto wa politiki (Kongo-Kinshasa)]]
 
-Makomi oyo elandi elakisi liste ya bakambi-mboka oyo balandanaki o ekolo oyo eyebanaki kala na nkombo ya ''Congo Belge'', wuta lipanda elongamaki na [[Belgique|Ekolo Beljiki]] ([[Europa]]) na mokolo [[1 juin|30 Juin]] [[1960]]. Bankombo nionso oyo Ekolo Kongo ezwaki banda lipanda, makomami mpe awa.
+Makomi oyo elandi elakisi liste ya bakambi-mboka oyo balandanaki o ekolo oyo eyebanaki kala na nkombo ya ''Congo Belge'', wuta lipanda elongamaki na [[Bɛ́ljiki]] ([[Eropa]]) na mokolo [[1 juin|30 Juin]] [[1960]]. Bankombo nionso oyo Ekolo Kongo ezwaki banda lipanda, makomami mpe awa.
 
 {|border="2" cellpadding="2" cellspacing="2"
 !Nkombo
@@ -39,3 +39,4 @@ Makomi oyo elandi elakisi liste ya bakambi-mboka oyo balandanaki o ekolo oyo eye
 |}
 
 {{PartiPolitiqueRDC}}
+{{lingála tɛ́}}
