--- a/Swisi.mw
+++ b/Swisi.mw
@@ -53,7 +53,7 @@ footnotes     = |
 == Jyografi ==
 '''Ekakoli ya molayi: [[Jyografi ya Swisi]]'''
 
-{{Europe}}
+{{Bisé ya Eropa}}
 
 [[af:Switserland]]
 [[als:Schweiz]]
