--- a/Alémani.mw
+++ b/Alémani.mw
@@ -1,6 +1,8 @@
 {{ndámbo}}
+'''Alémani''' ezalí [[esé]] o ntéi ya [[Eropa]].
+
+{{Bisé ya Eropa}}
 
 [[Category:Bisé ya Eropa]]
-
 [[de:Deutschland]]
 [[fr:Allemagne]]
