--- a/Kongó-Kinsásá.mw
+++ b/Kongó-Kinsásá.mw
@@ -225,7 +225,7 @@ Na mboka misusu mbiye ekopesa moto bokasi na 40%.
 * Babenga kombo Bambuti mpe Baife baye bavandi na zamba Ituri bazali na bikela bya bango. Bambuti bayebi banyama ya koleka kama mibale, mpe banzete ya koleka kama moko. Bakoboma nyama na basinga. Kasi Baife, bakobenga mpe bakoboma nyama na mbanzi mpe na makonga.
 
 == Politiki ==
-''Ekakoli ya molayi : [[Politiki bya Kongo Kinshasa]]''
+''Ekakoli ya molayi : [[Politiki bya Kɔ́ngɔ-Kinshasa]]''
 
 '''Mobéko Likonzi''' :
 * {{fr}} [[wikisource:Constitution de la République démocratique du Congo|Mobéko Likonzi]]
