--- a/Bandundu.mw
+++ b/Bandundu.mw
@@ -1,11 +1,11 @@
 <div style="float:right">[[image:DCongoBandundu.png]]</div>
 
-'''Bandundu''' ezali [[etuka]] ya ekolo [[Kɔ́ngɔ-Kinshasa]].
+'''Bandundu''' ezalí [[etúká]] ya ekólo [[Kɔ́ngɔ-Kinshasa]].
 
 
 {{BiteniKongoKinshasa}}
 [[Category:Kɔ́ngɔ-Kinshasa]]
-[[Category:Bituka bya Kɔ́ngɔ-Kinshasa]]
+[[Category:Bitúká bya Kɔ́ngɔ-Kinshasa]]
 
 [[en:Bandundu Province]]
 [[fr:Bandundu (province)]]
