/* Bituka bya Kɔ́ngɔ-Kinshasa */

--- a/Kongó-Kinsásá.mw
+++ b/Kongó-Kinsásá.mw
@@ -174,15 +174,15 @@ Actuellement l'armée française maintient la présence de militaires français 
 
 <br clear=all />
 
-== Bituka bya Kɔ́ngɔ-Kinshasa ==
+== Bitúká bya Kɔ́ngɔ-Kinshasa ==
 [[Image:DCongoNumbered.png|thumb|300px|right]]
-''Ekakoli ya molayi : [[Bituka bya Kɔ́ngɔ-Kinshasa]]''
+''Ekakoli ya molayi : [[Bitúká bya Kɔ́ngɔ-Kinshasa]]''
 
-Biteni mikonzi bya Kɔ́ngɔ-Kinshasa mibengami [[Etuka|Bituka]] (''Provinces'' na [[lifalansé]]). [[Kinshasa]] ezali mboka mokonzi ya ekolo mpe efandeli ya bituluku bia ekolo. Ezali na makoki ma engumba. Bingumba mpe bituka biyangelami, bizwi makoki ma koyangela yango moko na mobeko mpe bikambemi na bato baye bazwami na bituka bike bia mboka. Bituka biina bia bonsomi bizali mboka mondele, komine, seketele mpe sefeli. Bituka ya Kɔ́ngɔ-Kinshasa bazali:
+Biteni mikonzi bya Kɔ́ngɔ-Kinshasa mibengami [[Etúká|Bitúká]] (''Provinces'' ya [[lifalansé]]). [[Kinshasa]] ezalí mboka mokonzi ya ekólo mpé efándeli ya bitúlúká bya ekólo. Ezalí na makokí ma engúmba. Bingúmba mpé bitúká biyángélámí, bizwí makokí ma koyángela yangó mɔ̌kɔ́ na mobéko mpé bikambémí na bato baye bazwamí na bitúká bike bya mbóka. Bitúká biina bia bonsɔ́mí bizalí mbóka mondɛ́lɛ́, komine, seketele mpé sefeli. Bitúká bya Kɔ́ngɔ-Kinshasa bazalí:
 
 # [[Bandundu]]
 # [[Bas-Congo]]
-# [[Ekwatéli (etuka)|Ekwatéli]]
+# [[Ekwatéli (etúká)|Ekwatéli]]
 # [[Kasaï-Occidental]]
 # [[Kasaï-Oriental]]
 # [[Katanga]]
