*Empty MediaWiki Message*

--- a/Kasai_ya_Límbe.mw
+++ b/Kasai_ya_Límbe.mw
@@ -1,10 +1,10 @@
 [[image:DCongoWestKasai.png|right|]]
 
-'''Kasai-Occidental''' ezali [[etuka]] ya ekolo [[Kɔ́ngɔ-Kinshasa]].
+'''Kasai-Occidental''' ezalí [[etúká]] ya ekólo [[Kɔ́ngɔ-Kinshasa]].
 
 {{BiteniKongoKinshasa}}
 [[Category:Kɔ́ngɔ-Kinshasa]]
-[[Category:Bituka bya Kɔ́ngɔ-Kinshasa]]
+[[Category:Bitúká bya Kɔ́ngɔ-Kinshasa]]
 
 [[en:Kasai-Occidental]]
 [[fr:Kasaï-Occidental]]
