Kɔ́ngɔ Demokratiki

--- a/Ntángo_ya_banɔ́kɔ́_(Kongó-Kinsásá).mw
+++ b/Ntángo_ya_banɔ́kɔ́_(Kongó-Kinsásá).mw
@@ -6,20 +6,20 @@
 Voir aussi [[Ntangó ya banɔ́kɔ́]]
 
 Wuta mobu koto na kama mwambe na tuku mwambe na minei tii mobu koto na kama mwambe na tuku mwambe na mitano, Conférence de Berlin esangisi bana ya [[Eropa]], ya [[America]] mpe ya [[Turkia]] mpona kokamba mibeko mikofungola nzela ya Afrika. 
-Yango epesi mayele na ntoma [[Léopold II]] nakoyebisa mokili mobimba te ebale ya [[Kongó-Kinshasa|Kɔ́ngɔ]] eye ekambami na moleki nzela [[Henry Morton Stanley]], ezali mabele mwa ye mpe na lisanga lya ye. 
+Yango epesi mayele na ntoma [[Léopold II]] nakoyebisa mokili mobimba te ebale ya [[Kɔ́ngɔ Demokratiki|Kɔ́ngɔ]] eye ekambami na moleki nzela [[Henry Morton Stanley]], ezali mabele mwa ye mpe na lisanga lya ye. 
 
 Kasi soki na buku ekolo ya Afrika eye eleki na maboko ya mindele elakisi lokola ekolo ya poto, na mibeko mpe na misala ya mbulamatari, solo ezalaki kokambama lokola eloko ya moto moko. 
 
 == État Indépendant du Congo (Ekolo ya Bonsomi ya Kɔ́ngɔ)==
-Mapango ma ekolo Kongó esalami na bokakoli elongo na mindele miye basilaki kozwa ô kati, mabele manene. 
-Ya solo, likambo lya frontière ya Kongó esengi kotambola ekolo mobimba mpe kokamba bato na bokasi mpe esengaki kozwa bandeko ya miyindo. 
+Mapango ma ekolo Kɔ́ngɔ esalami na bokakoli elongo na mindele miye basilaki kozwa ô kati, mabele manene. 
+Ya solo, likambo lya frontière ya Kɔ́ngɔ esengi kotambola ekolo mobimba mpe kokamba bato na bokasi mpe esengaki kozwa bandeko ya miyindo. 
 
 Bitumba ekotaki kati ya batekisi mino ya nzoku épai moyindo, épai alabo na bakondzi ya miyindo. Bolongi ya léta epesaki na [[Belgica]] esengo enene. 
 
 Kasi sango ya malamu ya «État Indépendant du Congo» (to pe "[[Ekolo ya Bonsomi ya Kɔ́ngɔ]]")te na Belgica mpe na mboka mopaya. Sango ya monyokoli etali mosala ya ndembo ekomi na mpoto. Ntoma Léopold II atindi bato bya bikolo ndenge na ndenge mpona koyeba likambo liina. 
 
 Matongi na nzoto ya mopaya ebangisi Belgica elingi kosukisa monyokoli. Yango wana ekolo Belgica, mokolo ya zomi na mitano sanza ya zomi na moko mobu koto na kama libwa na mwambe, ekamati bokondzi na etando ya ekolo État Indépendant du Congo. 
-Na bokambami bwa Belgica, ekolo État Indépendant du Congo ekomi lokola mabele moko na Belgica. Na sima ya manso, bato babosani '''monyokoli''' mpe motungisi na tango ya ntoma Léopold II. Akomi ye moko «mokondzi malamu» mpe ekolo Kongó ekomi «ekolo moyindo ekambi mindele eye ekolakisa nzela».
+Na bokambami bwa Belgica, ekolo État Indépendant du Congo ekomi lokola mabele moko na Belgica. Na sima ya manso, bato babosani '''monyokoli''' mpe motungisi na tango ya ntoma Léopold II. Akomi ye moko «mokondzi malamu» mpe ekolo Kɔ́ngɔ ekomi «ekolo moyindo ekambi mindele eye ekolakisa nzela».
 
 == Mpona kokóma «ekolo moyindo molakisa nzela» ==
 Ekambi miyindo na mindele ekopesa ndakisa, ebongi esala mabe te. Elingaki bokondzi ya botata esimbi Bruxelles mpona bokambi ya miyindo ezala malamu, ekolo emikoka bozwi bwa ye. Kasi etiki na miyindo, manso etali mbulamatari te lokola botei bana ba kelasi, botongi ekolo mpe mosala ya monganga. 
@@ -43,7 +43,7 @@ Basimbi bokondzi bwa mindele, '''bambulu-mbulu mpe basoda'''. Na ebandeli, basod
 Na sima ya bokono ya mpongi eye ezongaka mbula nyoso, '''minganga''' ya mindele bakosilisa liboso makono ya seko. Wuta mobu koto na kama libwa na tuku misato, bakosalisa bato na bisika bazali mpe bakotambola mboka na mboka; ekobakisama mpe ba lopitalo ya mike mpe ya minene na bisika bya banganga nzambe mpe na bisika ya misala minene. 
 
 == «Mboka ya zomi» mpe dipanda == 
-Posa ya bondeko bonene kati ya bikolo ya Afrika mpe ya [[Eropa]] ebandi na mibu koto na kama libwa na tuku mitano. Mokano ya kobongisa mibeko elingi kokotisa ekolo Kongó na kati ya mabele ya Belgica. Bato babengi «mboka ya zomi». Mibu mitano na sima ya mobembo monene ya ntoma Baudouin na ekolo Kongó na mobu koto na kama libwa na tuku mitano na mitano, ekolo Kongó ezwi dipanda.
+Posa ya bondeko bonene kati ya bikolo ya Afrika mpe ya [[Eropa]] ebandi na mibu koto na kama libwa na tuku mitano. Mokano ya kobongisa mibeko elingi kokotisa ekolo Kɔ́ngɔ na kati ya mabele ya Belgica. Bato babengi «mboka ya zomi». Mibu mitano na sima ya mobembo monene ya ntoma Baudouin na ekolo Kɔ́ngɔ na mobu koto na kama libwa na tuku mitano na mitano, ekolo Kɔ́ngɔ ezwi dipanda.
 
 [[de:Geschichte der Demokratischen Republik Kongo#Belgisch-Kongo]]
 [[en:History of the Democratic Republic of the Congo#The Belgian Congo]]
@@ -51,5 +51,5 @@ Posa ya bondeko bonene kati ya bikolo ya Afrika mpe ya [[Eropa]] ebandi na mibu 
 [[nl:Belgisch Congo]]
 [[sv:Belgiska Kongo]]
 
-[[Category:Kɔ́ngɔ-Kinshasa]]
+[[Category:Kɔ́ngɔ Demokratiki]]
 [[Category:Historia ya Afrika]]
