--- a/Kongo.mw
+++ b/Kongo.mw
@@ -1,10 +1,9 @@
 {{Bokokani}}
 
 [[Image:Congo-Brazzaville-Congo-Kinshasa.png|right]]
-* [[Kɔ́ngɔ-Brazzaville]] (Republiki ya Kongo, yambo République populaire du Congo mpé [[Kɔngɔ ya Falansia]])
-* [[Kɔ́ngɔ-Kinshasa]] (Republiki ya Kongo Demokratiki, yambo [[Zaire]], [[Kongo belji]] mpé [[Ekolo ya Kɔ́ngɔ ya Bonsɔ́mi]])
-* [[Kɔ́ngɔ (ebale)]]
-*
+* [[Kɔ́ngɔ (Brazzaville)]] (Republiki ya Kɔ́ngɔ, yambo ''République populaire du Congo'' mpé [[Kɔngɔ ya Falansia]])
+* [[Kɔ́ngɔ Demokratiki]] (Republiki ya Kɔ́ngɔ Demokratiki, yambo [[Zaire]], [[Kɔ́ngɔ bɛlji]] mpé [[Ekólo ya Kɔ́ngɔ ya Bonsɔ́mi]])
+* [[ebale Kɔ́ngɔ]]
 
 [[da:Congo]]
 [[de:Kongo]]
