*Empty MediaWiki Message*

--- a/Kongo.mw
+++ b/Kongo.mw
@@ -1,8 +1,8 @@
 {{Bokokani}}
 
 [[Image:Congo-Brazzaville-Congo-Kinshasa.png|right]]
-* [[Kɔ́ngɔ (Brazzaville)]] (Republiki ya Kɔ́ngɔ, yambo ''République populaire du Congo'' mpé [[Kɔngɔ ya Falansia]])
-* [[Kɔ́ngɔ Demokratiki]] (Republiki ya Kɔ́ngɔ Demokratiki, yambo [[Zaire]], [[Kɔ́ngɔ bɛlji]] mpé [[Ekólo ya Kɔ́ngɔ ya Bonsɔ́mi]])
+* [[Republiki ya Kɔ́ngɔ]] (Republiki ya Kɔ́ngɔ, yambo ''République populaire du Congo'' mpé [[Kɔngɔ ya Falansia]])
+* [[Kɔ́ngɔ-Kinshasa|Kɔ́ngɔ Demokratiki]] (Republiki ya Kɔ́ngɔ Demokratiki, yambo [[Zaire]], [[Kɔ́ngɔ bɛlji]] mpé [[Ekólo ya Kɔ́ngɔ ya Bonsɔ́mi]])
 * [[ebale Kɔ́ngɔ]]
 
 [[da:Congo]]
