infobox_country (five words with * are not in ln)

--- a/Alémani.mw
+++ b/Alémani.mw
@@ -1,5 +1,49 @@
-{{ndámbo}}
+{{infobox_country|
+nkómbó               = Rebubliki Fedelali ya Alémani |
+nkómbó_na_lokóta     = Bundesrepublik Deutschland |
+image_flag           = Flag of Germany.svg|140px |
+image_coat           = Bundesadler.png|85px |
+image_map            = LocationGermanyInEurope.png|none|320px |
+mokáno               = (none)|
+loyémbo              = [[...]] (Einigkeit und Recht und Freiheit) |
+nkótá_ya_lɛ́ta       = [[Lialémani]]; nkótá ya *minorité [[*Dänisch]], [[*Sorbisch]], [[*Niederdeutsch]]|
+nkótá_ya_ekólo =|
+engúmba_mokonzi      = [[Berlin]] (engúmba mokonzi fedelali) |latd=52|latm=31|latNS=N|longd=13|longm=23|longEW=E|
+engúmba_monɛ́nɛ      = [[Berlin]] |
+government_type      =  |
+leader_titles        =  |
+leader_names         = [[Horst Köhler]] <small>([[Mokambi ekolo]])</small><br> [[Angela Merkel]]  <small>([[*Chancelier]])</small>|
+area                 = 357 031|area_rank=61nd|area_magnitude=1 E10|percent_water=4.2|
+population_estimate  = 82 501 000|population_estimate_year=2004|population_estimate_rank=14nd |
+population_density   = 231|population_density_rank=35th |
+population_census    = 82 501 000|population_census_year=2004|
+GDP_PPP           = $2498 billion|
+GDP_PPP_year=2005|BOKABO_PPP_rank=5th|
+GDP_nominal       = $2498 billion|
+GDP_nominal_year=2005|
+GDP_nominal_rank=17th|
+GDP_PPP_per_capita = $30 150|
+GDP_PPP_per_capita_rank=17th|
+GDP_nominal_per_capita = $35 075|
+GDP_nominal_per_capita_rank=17rd|
+HDI_year=2004|
+HDI=|
+HDI_rank=th|
+HDI_category=<font color="#009900">high</font>|
+sovereignty_type     = [[Lipandá]] |
+established_events     =- Bikólo ya Alémani ya Molɔngɔ́<br> - Republiki Fedelali <br>- "Este" mpé "Weste" bînsɔ |
+established_dates     =<br> [[18 yanuari]] [[1871]]<br> [[23 may]] [[1949]]<br>[[3 oktobele]] [[1990]]|
+mosɔlɔ     = [[Euro]]|currency_code=EUR|
+ngonga     = [[Central European Time|CET]] |utc_offset=+1 |
+ngonga_DST    = [[Central European Summer Time|CEST]] |utc_offset_DST=+2 |
+cctld        = [[.de]] |calling_code    = 49|
+footnotes     =  |
+}}
+
+
 '''Alémani''' ezalí [[esé]] o ntéi ya [[Eropa]].
+{{ndámbo}}
+
 
 {{Bisé ya Eropa}}
 
