--- a/Demokrasi.mw
+++ b/Demokrasi.mw
@@ -10,3 +10,5 @@ Demokrasi ezali bobele lolenge ya koyangela te, kasi mpe mabongi manso maye mako
 ===Mokango===
 * [[Politiki]]
 * [[Lisakoli_ya_molongo_ya_makoki_ya_moto]]
+
+[[fr:Démocratie]]
