*Empty MediaWiki Message*

--- a/Wikitravel.mw
+++ b/Wikitravel.mw
@@ -6,11 +6,11 @@ Wikitravel ebandemaki na Yuli ya [[2003]], na makanisi moko-moko mpenza na [[Wik
 Wikitravel esalemi na nkotá mingi. Ekútánémi na nkóta motpba (6).  Pona kotala:
 
 *[[Lingɛlɛ́sa]] [http://wikitravel.org/en/article/Main_Page Wikitravel]
-*[[Kiromani]] [http://wikitravel.org/ro/Portal]
+*[[Liromani]] [http://wikitravel.org/ro/Portal]
 *[[Lifalansé]] [http://wikitravel.org/fr/Accueil]
-*[[Kialemani]] [http://wikitravel.org/de/Hauptseite]
-*[[Kiswede]] [http://wikitravel.org/sv/Huvudsida]
-*[[Kijaponi]] [http://wikitravel.org/ja/]
+*[[Lialemani]] [http://wikitravel.org/de/Hauptseite]
+*[[Liswede]] [http://wikitravel.org/sv/Huvudsida]
+*[[Lijaponi]] [http://wikitravel.org/ja/]
 
 ==Tala mpe==
 *[[World66]]
