--- a/Demokrasi.mw
+++ b/Demokrasi.mw
@@ -1,11 +1,11 @@
 [[category:lisangá]]
-{{ndambo}}
+{{ndámbo}}
 
-'''Demokrasi''' liuti na maloba mabale ma [[ligresi]] : ''demos'' elingi koloba bana ba ekolo; mpe ''kratos'' elingi koloba bokonzi. Demokrasi elingi bongo koloba bokonzi o maboko o [[bana mboka]] mpe mpo ya bolamu ya bango.
+'''Demokrasi''' liutí na maloba mabale ma [[ligresi]] : ''δήμος'' ''demos'' elingí koloba bína ba ekólo; mpé  ''κράτος'' ''kratos'' elingí koloba bokonzi. Demokrasi elingí bongo koloba bokonzi o maboko o [[bǎna mbóka]] mpé mpó ya bolámu ya bangó.
 
-Baye bazali na bokonzi bazui bwango na maboko ma bato ba ekolo, mpe bokonzi bwango bozali mobimba o maboko ma moto moko to mwa [[liboka|liboke]] lya bato te.
+Baye bazali na bokonzi bazwi bwangó na maboko ma bato ba ekólo, mpé bokonzi bwangó bozali mobimba o maboko ma moto mɔ̌kɔ́ tǒ mwa [[libóké]] lya bato tɛ́.
 
-Demokrasi ezali bobele lolenge ya koyangela te, kasi mpe mabongi manso maye makosale 'te tokoka koyangela na lolenge ya demokrasi. Tokotanga mabongi manene manei, maye tokotala lokola makonzi ma demokrasi: bomipesi ya bato banso, botali bato banso lolenge yoko, [[bonsomi]] mpe boluki bolamu bwa bato banso.
+Demokrasi ezalí bobɛ́lɛ́ loléngé ya koyángela tɛ́, kasi mpé mabɔngí mansɔ maye makosale 'te tokoka koyángela na loléngé ya demokrasi. Tokotanga mabɔngí manɛ́nɛ manei, maye tokotala lokóla makonzi ma demokrasi: bomípɛ́sí ya bato bánsɔ, botali bato bánsɔ loléngé mɔ̌kɔ́, [[bonsɔ́mí]] mpé bolukí bolámu bwa bato bánsɔ.
 
 ===Mokango===
 * [[Politiki]]
