--- a/Joseph_Kabila.mw
+++ b/Joseph_Kabila.mw
@@ -1,5 +1,5 @@
 [[category:Moto wa politiki (Kongo-Kinshasa)]]
-[[Category:Kongo Demokratiki (Tata-mokonzi)]]
+[[Category:Tatá-mokonzi ya Kɔ́ngɔ Demokratiki]]
 [[en:Joseph Kabila]][[fr:Joseph Kabila]][[es:Joseph Kabila]][[kg:Joseph Kabila]][[sw:Joseph Kabila]]
 {{ndambo}}
 [[Image:Joseph_kabila.jpg|270px|thumb|Joseph Kabila]]
@@ -13,7 +13,7 @@ On [[March 28]], [[2004]], a coup attempt or mutiny around the capital [[Kinshas
 Kabila abundaki na mapinzo ya barebɛl ya tata wa ye, nà bitumba oyo ememaki wa ye tata o kimokonzi. Alandaki kelasi ya mapinzo okati ya mapinzo ya [[Uganda]] mpe ya [[Rwanda]]. Asalaki na misala mingi okati o bulamatari liboso ya kozala mokambi-ekolo, lokola oyo ya General-Major mpe Mokambi-lisanga ya Mapinzo ya mabele ya ekolo Kɔ́ngɔ-Kinshasa, esika oyo a kambaki basoda o ekolo Kɔ́ngɔ-Kinshasa na bitumba ná barebɛl, obanda 1998. Kasi bato mingi bakanisaki ete ye azalaki na manso makokí te pona mosala ya mokambi-ekolo, na ntango alandaki tata wa ye [[Laurent Kabila]] na kimokonzi.  
 
 == Tála mpé ==
-* [[Kongo Demokratiki (Tata-mokonzi)]]
+* [[Tatá-mokonzi ya Kɔ́ngɔ Demokratiki]]
 
 == Nkásá olibanda Wikipedia ==
 * [http://news.bbc.co.uk/1/hi/world/africa/country_profiles/1076399.stm BBC Country Profile]*
