Tatá-mokonzi ya Kɔ́ngɔ Demokratiki

--- a/Joseph_Kasa-Vubu.mw
+++ b/Joseph_Kasa-Vubu.mw
@@ -5,9 +5,10 @@
 '''Joseph Kasa-Vubu''', Mokambi Ekolo [[1 yuli]] [[1960]] - [[24 novembere]] [[1965]]
 (Mokambi Bulamatari na yě azalákí [[Patrice Lumumba]])
 
-* voir aussi [[Kongo Demokratiki (Tata-mokonzi)]]
+== Tála mpé ==
+* [[Tatá-mokonzi ya Kɔ́ngɔ Demokratiki]]
 
-[[Category:Kongo Demokratiki (Tata-mokonzi)]]
+[[Category:Tatá-mokonzi ya Kɔ́ngɔ Demokratiki]]
 
 [[en:Joseph Kasavubu]]
 [[fr:Joseph Kasavubu]]
