Tatá-mokonzi ya Kɔ́ngɔ Demokratiki

--- a/Mobutu_Sese_Seko.mw
+++ b/Mobutu_Sese_Seko.mw
@@ -1,11 +1,11 @@
 [[category:Moto wa politiki (Kongo-Kinshasa)]]
-[[Category:Kongo Demokratiki (Tata-mokonzi)]]
+[[Category:Tatá-mokonzi ya Kɔ́ngɔ Demokratiki]]
 
 [[Image:Mobutu EU.jpg|thumb|right|Joseph-Désiré Mobutu (-1971) / Mobutu Sese Seko]]
 {{ndámbo}}
 
 ==Tála mpé==
-* [[Kongo Demokratiki (Tata-mokonzi)]]
+* [[Tatá-mokonzi ya Kɔ́ngɔ Demokratiki]]
 
 [[de:Mobutu Sese Seko]]
 [[en:Mobutu Sese Seko]]
