--- a/Tatá-mokonzi_ya_Kɔ́ngɔ_Demokratiki.mw
+++ b/Tatá-mokonzi_ya_Kɔ́ngɔ_Demokratiki.mw
@@ -1,6 +1,6 @@
 [[en:Heads of State of the Democratic Republic of the Congo]]
 [[fr:Présidents_de_la_République_démocratique_du_Congo]]
-[[Category:Kongo Demokratiki (Tata-mokonzi)]]
+[[Category:Tatá-mokonzi ya Kɔ́ngɔ Demokratiki]]
 [[Category:moto wa politiki (Kongo-Kinshasa)]]
 
 Makomi oyo elandi elakisi liste ya bakambi-mboka oyo balandanaki o ekolo oyo eyebanaki kala na nkombo ya ''Congo Belge'', wuta lipanda elongamaki na [[Bɛ́ljika]] ([[Eropa]]) na mokolo [[1 juin|30 Juin]] [[1960]]. Bankombo nionso oyo Ekolo Kongo ezwaki banda lipanda, makomami mpe awa.
