--- a/Ndenge_ya_Misala.mw
+++ b/Ndenge_ya_Misala.mw
@@ -35,4 +35,4 @@ Mosala “oyo ya bai Mboka” esungami na mbula matali mpe elukaka na yango kosa
 Misala “oyo ya bai mboka” na motuya ya malamu koleka “oyo ya ba kompani to ya mot ye
 moko”
 
-[[Category:Boteyi]]
+[[Category:Botéyi]]
