--- a/Kongó-Kinsásá.mw
+++ b/Kongó-Kinsásá.mw
@@ -228,7 +228,7 @@ Na mboka misusu mbiye ekopesa moto bokasi na 40%.
 ''Ekakoli ya molayi : [[Politiki bya Kɔ́ngɔ-Kinshasa]]''
 
 '''Mobéko Likonzi''' :
-* {{fr}} [[wikisource:Constitution de la République démocratique du Congo|Mobéko Likonzi]]
+* {{fr}} [[fr:wikisource:Constitution de la République démocratique du Congo|Mobéko Likonzi]]
 
 '''Bakambi Ekolo''' :
 * [[1960]] - [[1965]] [[Joseph Kasavubu]]
