--- a/Tatá-mokonzi_ya_Kɔ́ngɔ_Demokratiki.mw
+++ b/Tatá-mokonzi_ya_Kɔ́ngɔ_Demokratiki.mw
@@ -1,9 +1,9 @@
 [[en:Heads of State of the Democratic Republic of the Congo]]
 [[fr:Présidents_de_la_République_démocratique_du_Congo]]
 [[Category:Tatá-mokonzi ya Kɔ́ngɔ Demokratiki]]
-[[Category:moto wa politiki (Kongo-Kinshasa)]]
+[[Category:Moto wa politiki ya Kɔ́ngɔ Demokratiki]]
 
-Makomi oyo elandi elakisi liste ya bakambi-mboka oyo balandanaki o ekolo oyo eyebanaki kala na nkombo ya ''Congo Belge'', wuta lipanda elongamaki na [[Bɛ́ljika]] ([[Eropa]]) na mokolo [[1 juin|30 Juin]] [[1960]]. Bankombo nionso oyo Ekolo Kongo ezwaki banda lipanda, makomami mpe awa.
+Mabomí óyo elandi elakisi liste ya bakambi-mboka óyo balandanaki o ekólo óyo eyebanaki kala na nkómbó ya ''Bôngó Ebelé'', wuta lipánda elongamaki na [[Bɛ́ljika]] ([[Eropa]]) na mokóló [[1 yuni|30 yuni]] [[1960]]. Nkómbó nyɔ́nsɔ óyo Ekólo Kɔ́ngɔ Demokratiki ezwaki bandá lipánda, makomami mpé áwa.
 
 {|border="2" cellpadding="2" cellspacing="2"
 !Nkombo
