*Empty MediaWiki Message*

--- a/Tatá-mokonzi_ya_Kɔ́ngɔ_Demokratiki.mw
+++ b/Tatá-mokonzi_ya_Kɔ́ngɔ_Demokratiki.mw
@@ -12,21 +12,21 @@ Mabomí óyo elandi elakisi liste ya bakambi-mboka óyo balandanaki o ekólo óy
 !Parti
 !Elembo
 |-
-| colspan="5" bgcolor=#5599cc | <center> [[Kongo-Kinshasa|Kongo]] </center>
+| colspan="5" bgcolor=#5599cc | <center> [[Kɔ́ngɔ-Kinshasa|Kɔ́ngɔ]] </center>
 |-
 | [[Joseph Kasa-Vubu]] || [[1 yuli]] [[1960]] || [[24 novembere]] [[1965]] ||| [[Association des personnes de Bakongo|ABAKO]]  || renversé militairement par Mobutu
 |-
 | [[Mobutu Sese Seko|Joseph-Désiré Mobutu]] ||  [[25 novembere]] [[1965]] || [[1 yuli]] [[1966]] || Mil ||
 |-
-|colspan="5" bgcolor=#5599cc | <center> [[Kongo-Kinshasa|Kongo Demokratiki]] </center>
+|colspan="5" bgcolor=#5599cc | <center> [[Kɔ́ngɔ Demokratiki]] </center>
 |-
 | [[Mobutu Sese Seko|Joseph-Désiré Mobutu]] || [[1 yuli]] [[1966]] || [[27 oktobele]] [[1971]] || [[Mouvement Populaire Révolutionnaire|MRP]] || 
 |-
-|colspan="5" bgcolor=#5599cc  | <center> [[Kongo-Kinshasa|Zaïre]] </center>
+|colspan="5" bgcolor=#5599cc  | <center> [[Kɔ́ngɔ Demokratiki|Zaïre]] </center>
 |-
 | [[Mobutu Sese Seko]] || [[27 oktobele]] [[1971]] || [[16 mai]] [[1997]] || MRP || renversé alors qu'il était à l'étranger
 |-
-|colspan="5" bgcolor=#5599cc | <center> [[Kongo-Kinshasa|Kongo Demokratiki]] </center>
+|colspan="5" bgcolor=#5599cc | <center> [[Kɔ́ngɔ Demokratiki]] </center>
 |-
 | [[Laurent-Désiré Kabila]] || [[17 mai]] [[1997]] || [[29 mai]] [[1997]] || [[Alliance des Forces Démocratiques pour la Libération du Congo (Zaïre)|AFDL]] || à titre intérimaire
 |-
