lionk Stanleyv. /  mois en lingala

--- a/Bakambi-ekólo_ba_Kongó-Kinsásá.mw
+++ b/Bakambi-ekólo_ba_Kongó-Kinsásá.mw
@@ -14,44 +14,44 @@ Makomi oyo elandi elakisi liste ya '''bakambi ekolo''' oyo balandanaki o ekolo o
 |- valign=top
 |'''[[Kɔ́ngɔ-Kinshasa|Repubiliki ya Kɔ́ngɔ (Kinshasa)]]'''||colspan="3"|''Independence from [[Belgium]]''
 |- valign=top bgcolor="#ffffec"
-|<small>[[1 July]] [[1960]] to [[1 August]] [[1964]]||'''[[Joseph Kasavubu]]''', <small>Mokambi leta||<small>ABAKO||&nbsp;
+|<small>[[1 yuli]] [[1960]] to [[1 ogusiti]] [[1964]]||'''[[Joseph Kasavubu]]''', <small>Mokambi leta||<small>[[Association des personnes de Bakongo|ABAKO]]||&nbsp;
 |- valign=top bgcolor="#ffffec"
-|<small>[[1 August]] [[1964]] to [[25 November]] [[1965]]||'''[[Joseph Kasavubu]]''', <small>Mokambi ekolo||<small>ABAKO||&nbsp;
+|<small>[[1 ogusiti]] [[1964]] to [[25 novɛmbɛ]] [[1965]]||'''[[Joseph Kasavubu]]''', <small>Mokambi ekolo||<small>ABAKO||&nbsp;
 |- valign=top bgcolor="#ffffec"
-|<small>[[31 March]] [[1961]] to [[5 August]] [[1961]]||'''[[Antoine Gizenga]]''', <small>Mokambi leta||<small>MNC-L||<small>In rebellion, at Stanleyville
+|<small>[[31 marsi]] [[1961]] to [[5 ogusiti]] [[1961]]||'''[[Antoine Gizenga]]''', <small>Mokambi leta||<small>MNC-L||<small>In rebellion, at [[Stanleyville]]
 |- valign=top bgcolor="#ffffec"
-|<small>[[25 November]] [[1965]] to ''[[1 July]] [[1966]]''||[[Joseph Mobutu|'''Joseph'''-Désiré '''Mobutu''']], <small>Mokambi ekolo||<small>Mil||&nbsp; 
+|<small>[[25 novɛmbɛ]] [[1965]] to ''[[1 yuli]] [[1966]]''||[[Joseph Mobutu|'''Joseph'''-Désiré '''Mobutu''']], <small>Mokambi ekolo||<small>Mil||&nbsp; 
 |- valign=top
 |colspan="4"|'''[[Kɔ́ngɔ-Kinshasa|Repubiliki ya Kɔ́ngɔ Demokratiki]]''' 
 |- valign=top bgcolor="#ffffec"
-|<small>''[[1 July]] [[1966]]'' to ''[[1967]]''||rowspan="2"|[[Joseph Mobutu|'''Joseph'''-Désiré '''Mobutu''']], <small>Mokambi ekolo||<small>Mil||<small>''(contd.)''
+|<small>''[[1 yuli]] [[1966]]'' to ''[[1967]]''||rowspan="2"|[[Joseph Mobutu|'''Joseph'''-Désiré '''Mobutu''']], <small>Mokambi ekolo||<small>Mil||<small>''(contd.)''
 |- valign=top bgcolor="#ffffec"
-|<small>''[[1967]]'' to ''[[27 October]] [[1971]]''||<small>MPR||&nbsp;
+|<small>''[[1967]]'' to ''[[27 ɔkɔtɔbɛ]] [[1971]]''||<small>[[Mouvement Populaire Révolutionnaire|MRP]]||&nbsp;
 |- valign=top
 |colspan="4"|'''[[Zaire|Repubiliki ya Zaire]]'''
 |- valign=top bgcolor="#ffffec"
-|<small>[[27 October]] [[1971]] to ''[[10 January]] [[1972]]''||[[Joseph Mobutu|'''Joseph'''-Désiré '''Mobutu''']], <small>Mokambi ekolo||rowspan="2"|<small>MPR||<small>Abalusi nkombo naye na [[Joseph Mobutu|Mobutu Sese Seko]]
+|<small>[[27 ɔkɔtɔbɛ]] [[1971]] to ''[[10 yanuari]] [[1972]]''||[[Joseph Mobutu|'''Joseph'''-Désiré '''Mobutu''']], <small>Mokambi ekolo||rowspan="2"|<small>MPR||<small>Abalusi nkombo naye na [[Joseph Mobutu|Mobutu Sese Seko]]
 |- valign=top bgcolor="#ffffec"
-|<small>''[[10 January]] [[1972]]'' to [[16 May]] [[1997]]||'''[[Joseph Mobutu|Mobutu Sese Seko]]''', <small>Mokambi ekolo
+|<small>''[[10 yanuari]] [[1972]]'' to [[16 mai]] [[1997]]||'''[[Joseph Mobutu|Mobutu Sese Seko]]''', <small>Mokambi ekolo
 ||<small>''(contd.)''; awa likolo na nkombo [[Joseph Mobutu|'''Joseph'''-Désiré '''Mobutu''']]
 |- valign=top
 |colspan="4"|'''[[Repubiliki ya Kɔ́ngɔ Demokratiki]]''' 
 |- valign=top bgcolor="#ffffec"
-|<small>[[17 May]] [[1997]] to ''[[29 May]] [[1997]]''||'''[[Laurent-Désiré Kabila]]''', <small>Mokambi leta||rowspan="2"|<small>AFDL||&nbsp;
+|<small>[[17 mai]] [[1997]] to ''[[29 mai]] [[1997]]''||'''[[Laurent-Désiré Kabila]]''', <small>Mokambi leta||rowspan="2"|<small>[[Alliance des Forces Démocratiques pour la Libération du Congo (Zaïre)|AFDL]]||&nbsp;
 |- valign=top bgcolor="#ffffec"
-|<small>''[[29 May]] [[1997]]'' to [[16 January]] [[2001]]||'''[[Laurent-Désiré Kabila]]''', <small>Mokambi ekolo||&nbsp;
+|<small>''[[29 mai]] [[1997]]'' to [[16 yanuari]] [[2001]]||'''[[Laurent-Désiré Kabila]]''', <small>Mokambi ekolo||&nbsp;
 |- valign=top bgcolor="#ffffec"
-|<small>[[17 January]] [[2001]] to ''[[26 January]] [[2001]]''||'''[[Joseph Kabila]]''', <small>Mokambi ekolo a.i. ||rowspan="3"|<small> AFDL||&nbsp;
+|<small>[[17 yanuari]] [[2001]] to ''[[26 yanuari]] [[2001]]''||'''[[Joseph Kabila]]''', <small>Mokambi ekolo a.i. ||rowspan="3"|<small> AFDL||&nbsp;
 |- valign=top bgcolor="#ffffec"
-|<small>''[[26 January]] [[2001]]'' to lelo''||'''[[Joseph Kabila]]''', <small>Mokambi ekolo||&nbsp;
+|<small>''[[26 yanuari]] [[2001]]'' to lelo''||'''[[Joseph Kabila]]''', <small>Mokambi ekolo||&nbsp;
 |}
 
-=== Baparti:- ===
+=== Baparti ===
 
 {{Baparti o Kɔ́ngɔ-Kinshasa}}
 
 
-=== See also:- ===
+=== Tála mpé ===
 *[[Kongo]]
 **[[Molɔngɔ Bakambi bulamatari of the Kɔ́ngɔ-Kinshasa|Bakambi bulamatari of the Kɔ́ngɔ-Kinshasa]]
 **[[Bakambi ekolo o ntangu ya Ekolo ya bonsomi ya Kɔ́ngɔ]] 
