*Empty MediaWiki Message*

--- a/Bakambi-ekólo_ba_Kongó-Kinsásá.mw
+++ b/Bakambi-ekólo_ba_Kongó-Kinsásá.mw
@@ -1,9 +1,4 @@
-[[en:Heads of State of the Democratic Republic of the Congo]]
-[[fr:Présidents_de_la_République_démocratique_du_Congo]]
-
-[[Category:moto wa politiki (Kongo-Kinshasa)]]
-
-Makomi oyo elandi elakisi liste ya '''bakambi ekolo''' oyo balandanaki o ekolo oyo eyebánákí kala na nkombo ya "Congo Belge", wuta lipanda elongamaki na [[Belgique|Ekolo Belgiki]] na mokolo [[1 juin|30 Juin]] [[1960]]. Bankombo nionso oyo Ekolo Kongo ezwaki banda lipanda, makomami mpe awa.
+Mabomí óyo elandi elakisi liste ya '''bakambi-mboka''' óyo balandanaki o ekólo óyo eyebanaki kala na nkómbó ya ''Bôngó Ebelé'', wuta lipánda elongamaki na [[Bɛ́ljika]] ([[Eropa]]) na mokóló [[30 yuni]] [[1960]]. Nkómbó nyɔ́nsɔ óyo Ekólo Kɔ́ngɔ Demokratiki ezwaki bandá lipánda, makomami mpé áwa.
 
 {| border=1 style="border-collapse: collapse"
 |- align=left
@@ -59,5 +54,7 @@ Makomi oyo elandi elakisi liste ya '''bakambi ekolo''' oyo balandanaki o ekolo o
 *[[Zaire]]
 
 [[Category:Politics bya Kɔ́ngɔ-Kinshasa]]
+[[Category:moto wa politiki (Kongo-Kinshasa)]]
+
 [[fr:Présidents de la République démocratique du Congo]]
 [[en:Heads of State of the Democratic Republic of the Congo]]
