--- a/Kongó-Kinsásá.mw
+++ b/Kongó-Kinsásá.mw
@@ -303,7 +303,7 @@ Na mboka misusu mbiye ekopesa moto bokasi na 40%.
 * [[Santé en République démocratique du Congo]]
 * [[Category:Afrika]] 
 * [[Category:Bisé ya Afrika]] 
-* [[Category:Repubiliki ya Kɔ́ngɔ Demokratiki]]
+* [[Category:Republiki ya Kɔ́ngɔ Demokratiki]]
 * [[Category:Kongo Kinshasa|Kɔ́ngɔ-Kinshasa]]
 <br clear="all"/>
 
