*Empty MediaWiki Message*

--- a/Kongó-Kinsásá.mw
+++ b/Kongó-Kinsásá.mw
@@ -299,12 +299,12 @@ Na mboka misusu mbiye ekopesa moto bokasi na 40%.
 
 ==Tála mpé==
 {{Commons|Category:Democratic Republic of the Congo|la République démocratique du Congo}}
-* [[Afrika]]
+
 * [[Santé en République démocratique du Congo]]
 * [[Category:Afrika]] 
 * [[Category:Bisé ya Afrika]] 
 * [[Category:Republiki ya Kɔ́ngɔ Demokratiki]]
-* [[Category:Kongo Kinshasa|Kɔ́ngɔ-Kinshasa]]
+* [[Category:Kɔ́ngɔ-Kinshasa]]
 <br clear="all"/>
 
 == [[wikipédia:Liens externes|Mankásá o libándá]] ==
