*Empty MediaWiki Message*

--- a/Bandalúngwa.mw
+++ b/Bandalúngwa.mw
@@ -22,7 +22,7 @@ ProvIII=[[Kinshasa (province Constitution 2005)|Kinshasa]]
 *[http://home.scarlet.be/~godfr123/cartes/carte_leopoldville_1954.jpg Carte de Léopoldville] (1954)
 
 {{BakominiKinshasa}}
-[[Category:BaKomini ya Kinshasa]]
+[[Category:Bakomini ya Kinshasa]]
 {{ndambo}}
 [[en:Bandalungwa]]
 [[fr:Bandalungwa]]
