/* Voir aussi */ -> Tala mpé

--- a/Ngaliéma.mw
+++ b/Ngaliéma.mw
@@ -21,11 +21,11 @@ ProvIII=[[Kinshasa (province Constitution 2005)|Kinshasa]]
 
 La commune accueille par ailleurs le [[palais de Marbre]], ancienne résidence principale de [[Mobutu Sese Seko]], et le camp militaire Tshatshi.
 
-==Voir aussi==
+==Tála mpé==
 ===Mankasa okati Wikipedia===
 *[[Molongo ya ba komini ya Kinshasa]]
 
-===Liens externes===
+===Nkásá o libándá===
 *[http://www.rotarybinza.cd/ Rotary Club de Binza]
 *[http://www.safricas.cd/realisations/index_divers.html Photos des jardins du Mont Nagliema]
 *[http://www.lib.utexas.edu/maps/world_cities/kinshasa_2001.jpg Carte de la ville de Kinshasa] (2001)
