--- a/Lingála.mw
+++ b/Lingála.mw
@@ -44,8 +44,10 @@ Comment améliorer un article sur une langue?
 
 >> ndakisa / voir come exemple: [[:en:Lingala_language|Lingala_language]] mpé [[:fr:Lingala|Lingala]]
 ----
-{{ndámbo}}
-[[Category:Lokótá]]
+{{nk-ndámbo-lokótá}}
+
+[[Category:Nkotá ya Babantu]]
+[[Category:Nkotá ya Kongo Kinshasa]]
 
 
 [[de:Lingala]]
