--- a/Ntángo_ya_banɔ́kɔ́_(Kongó-Kinsásá).mw
+++ b/Ntángo_ya_banɔ́kɔ́_(Kongó-Kinsásá).mw
@@ -51,5 +51,5 @@ Posa ya bondeko bonene kati ya bikolo ya Afrika mpe ya [[Eropa]] ebandi na mibu 
 [[nl:Belgisch Congo]]
 [[sv:Belgiska Kongo]]
 
-[[Category:Kɔ́ngɔ Demokratiki]]
+[[Category:Kɔ́ngɔ-Kinshasa]]
 [[Category:Historia ya Afrika]]
