--- a/Kongó-Kinsásá.mw
+++ b/Kongó-Kinsásá.mw
@@ -58,7 +58,7 @@ Míngi śé na káti ya bakótá bya ekólo bokoyéba etando ya bikelá, mabelé
 == Likambo ==
 ''Ekakoli ya molayi : [[Mpo ya Kɔ́ngɔ-Kinshasa]]''
 
-''Tala mpé: [[Kɔ́ngɔ (ntangó ya banɔ́kɔ́)]]''
+''Tala mpé: [[Ntangó ya banɔ́kɔ́(Kɔ́ngɔ Demokratiki)]]''
 
 <!--
 Dès les années 40, dans ce qui était alors le [[Congo belge]], deux tendances indépendantistes importantes se manifestaient dans la capitale [[Kinshasa|Léopoldville]] : celle des « gens d'en bas » ([[Bas-Congo]] et [[Bandundu]]) parlant le [[kikongo]] et celle des « gens d'en haut » parlant le [[lingala]], venant de l'[[Équateur (province)|Équateur]] d'abord et finalement de tout l'intérieur du pays. Dans la première catégorie se forma en [[1949]] une association d'abord culturelle et finalement politique, l'[[ABAKO]], dont [[Joseph Kasavubu]] devint président en [[1954]]. Son rêve devint de rétablir l'ancien royaume [[Kongo]] de l'époque [[Portugal|portugaise]], en fait celui des [[Bakongo]]. Cette tendance se durcit très vite et réclama bientôt l'indépendance immédiate tout en demeurant fédéraliste lorsqu'il s'agit plus tard de discuter le problème du reste du Congo. Les évolués « d'en haut », venant de régions plus diversifiées et séduits par le « plan de 30 ans pour l'émancipation de l'[[Afrique]] » du Professeur [[belgique|belge]] [[Van Bilsen]], publié en [[1956]], étaient aussi désireux de maintenir le grand Congo unitaire. Leur manifeste dans ce sens publié le [[1er juillet|1{{er}} juillet]] [[1956]] fut vigoureusement combattu par l'[[ABAKO]] dès son assemblée générale du [[23 août]] [[1956]]. Le plan de 30 ans est déclaré utopique : « la nationalisation des grandes compagnies vivrières et agricoles comme des parastataux est souhaitable. Puisque l'heure est venue, il faut accorder aujourd'hui même l'indépendance immédiate ! »
