justice → bosémbo, (LINGOMBA LYA BANTOMA BA EKOLO)

--- a/Namibia.mw
+++ b/Namibia.mw
@@ -4,7 +4,7 @@ native_name 		= Republic of Namibia<br><br><br>|
 image_flag 		= Namibia flag medium.png |
 image_coat 		= Namibia_coa.png |
 image_map 		= LocationNamibia.png |
-national_motto 		= Unity, Liberty, Justice<br>(Lingála: bɔ́kɔ́, bonsɔ́mi, jistisi)|
+national_motto 		= Unity, Liberty, Justice<br>(Lingála: bɔ́kɔ́, bonsɔ́mi, bosémbo)|
 national_anthem 	= [[Namibia, Land of the Brave]] |
 official_languages 	= [[Lingɛlɛsi]]|
 Nkótá nasyonale         = [[Ovambo]], [[Afrikaans]], [[Lialemani]]|
