--- a/Kongó-Kinsásá.mw
+++ b/Kongó-Kinsásá.mw
@@ -9,7 +9,7 @@
 | align="center" width="280px" | ([[Bɛndɛ́lɛ ya Kɔ́ngɔ-Kinshasa|Détails]])([[Almwali ya Kɔ́ngɔ-Kinshasa|Détails]])
 |}
 |-----
-| align="center" colspan="2" style="border-bottom:3px solid gray;" | <font size="-1">''[[Devise]] nationale : Demokrasi - Jistisi - Bosangani''</font>
+| align="center" colspan="2" style="border-bottom:3px solid gray;" | <font size="-1">''[[Devise]] nationale : Demokrasi - Bosémbo - Bosangani''</font>
 |-----
 | align="center" colspan="2" | [[image:LocationDRCongo.png|200px|]]
 |-----
