--- a/Bɛndɛ́lɛ_ya_Swisi.mw
+++ b/Bɛndɛ́lɛ_ya_Swisi.mw
@@ -4,7 +4,7 @@ Bɛndɛ́lɛ ya Swisi
 
 {{Nationalflags}}
 
-[[Category:Molɔngɔ́ ya babɛndɛ́lɛ ya bisé|*]]
+[[Category:Bɛndɛ́lɛ ya Swisi bisé]]
 [[Category:Molɔngɔ́ ya babɛndɛ́lɛ| ]]
 [[Category:Swisi]]
 [[Category:Bisé ya Eropa]]
