--- a/Bakambi-ekólo_ba_Kongó-Kinsásá.mw
+++ b/Bakambi-ekólo_ba_Kongó-Kinsásá.mw
@@ -53,7 +53,7 @@ Mabomí óyo elandi elakisi liste ya '''bakambi-mboka''' óyo balandanaki o ekó
 **[[Molɔngɔ Bakambi ekolo o ntangu ya Congo Belge|Bakambi ekolo o ntangu ya Congo Belge]] 
 *[[Zaire]]
 
-[[Category:Politics bya Kɔ́ngɔ-Kinshasa]]
+[[Category:Politiki bya Kɔ́ngɔ-Kinshasa]]
 [[Category:moto wa politiki (Kongo-Kinshasa)]]
 
 [[fr:Présidents de la République démocratique du Congo]]
