*Empty MediaWiki Message*

--- a/Joseph_Kasa-Vubu.mw
+++ b/Joseph_Kasa-Vubu.mw
@@ -1,5 +1,5 @@
 {{ndambo}}
-[[category:Moto wa politiki (Kongo-Kinshasa)]]
+
 [[Image:Pres. Joseph Kasa vubu.jpg|thumb|Joseph Kasa-Vubu]]
 
 '''Joseph Kasa-Vubu''', Mokambi Ekolo [[1 yuli]] [[1960]] - [[24 novembere]] [[1965]]
@@ -8,6 +8,7 @@
 == Tála mpé ==
 * [[Tatá-mokonzi ya Kɔ́ngɔ Demokratiki]]
 
+[[category:Moto wa politiki ya Kɔ́ngɔ Demokratiki]]
 [[Category:Tatá-mokonzi ya Kɔ́ngɔ Demokratiki]]
 
 [[en:Joseph Kasavubu]]
