--- a/Patrice_Lumumba.mw
+++ b/Patrice_Lumumba.mw
@@ -2,7 +2,7 @@
 
 '''Patrice Émery Lumumba''', Moyángeli mwa yambo ya Bulamatari o Kɔ́ngɔ-Kinshasa, abótámí o mobú [[Onalua]] ([[Katako-Kombé]], [[Sanukru]], [[Kasai-Oriental]]) o mokɔlɔ [[2 ya sanza ya sambo]] o mobú [[1925]] ya  mpé akúfí o [[Katanga]] o mobú [[17 ya sanza ya mɔ̌kɔ́]] o mobú [[1961]].
 
-[[category:Moto wa politiki (Kongo-Kinshasa)]]
+[[category:Moto wa politiki ya Kɔ́ngɔ Demokratiki]]
 [[Image:Lumumba.jpg|thumb|Patrice E. Lumumba]]
 [[Image:Patrice_Lumumba_PM_(2).jpg|thumb|Patrice E. Lumumba]]
 
