*Empty MediaWiki Message*

--- a/Bakambi-ekólo_ba_Kongó-Kinsásá.mw
+++ b/Bakambi-ekólo_ba_Kongó-Kinsásá.mw
@@ -54,7 +54,7 @@ Mabomí óyo elandi elakisi liste ya '''bakambi-mboka''' óyo balandanaki o ekó
 *[[Zaire]]
 
 [[Category:Politiki bya Kɔ́ngɔ-Kinshasa]]
-[[Category:moto wa politiki (Kongo-Kinshasa)]]
+[[category:Moto wa politiki ya Kɔ́ngɔ Demokratiki]]
 
 [[fr:Présidents de la République démocratique du Congo]]
 [[en:Heads of State of the Democratic Republic of the Congo]]
