--- a/Kikɔ́ngɔ.mw
+++ b/Kikɔ́ngɔ.mw
@@ -23,6 +23,8 @@ Comment améliorer un article sur une langue?
 ----
 [[Category:Lokótá]]
 [[Category:bandambo ya Nkota ya Nijer-Kongo]]
+[[Category:Nkotá ya Kongo Kinshasa]]
+[[Category:Nkotá ya Babantu]]
 
 {{InterWiki|left|code=kg}}
 
