--- a/Kiswahíli.mw
+++ b/Kiswahíli.mw
@@ -19,6 +19,9 @@ Comment améliorer un article sur une langue?
 >> voir come exemple: http://en.wikipedia.org/wiki/Lingala_language 
 ----
 [[Category:Lokótá]]
+[[Category:bandambo ya Nkota ya Nijer-Kongo]]
+[[Category:Nkotá ya Kongo Kinshasa]]
+[[Category:Nkotá ya Babantu]]
 
 [[cs:Svahilština]]
 [[de:Swahili (Sprache)]]
