cat Nkotá ya Kongo Kinshasa

--- a/Falansé.mw
+++ b/Falansé.mw
@@ -5,6 +5,8 @@
 {{InterWiki|code=fr}}
 
 [[Category:Lokótá]]
+[[Category:Nkotá ya Kongo Kinshasa]]
+[[Category:Nkotá ya mokili]]
 
 [[af:Franse taal]]
 [[als:Französische Sprache]]
