*Empty MediaWiki Message*

--- a/Lialémani.mw
+++ b/Lialémani.mw
@@ -1,6 +1,6 @@
 '''Lialemani''' ezali [[lokótá]] na bato ya [[Alémani]]. Elobamí o na eténi ya [[Bɛ́lɛjika]], [[Swisi]], [[Otrishi]] na fimwa bato na [[Afríka]] ([[Namibia]], [[Kamerun]], na [[Togo]]).
 
-[[Category:Lokótá]] [[Category:Bisé ya Eropa]] 
+[[Category:Lokótá]] [[Category:Nkotá ya mokili]] 
 
 
 
