*Empty MediaWiki Message*

--- a/Kiswahíli.mw
+++ b/Kiswahíli.mw
@@ -22,6 +22,7 @@ Comment améliorer un article sur une langue?
 [[Category:bandambo ya Nkota ya Nijer-Kongo]]
 [[Category:Nkotá ya Kongo Kinshasa]]
 [[Category:Nkotá ya Babantu]]
+[[Category:Nkotá ya mokili]]
 
 [[cs:Svahilština]]
 [[de:Swahili (Sprache)]]
