*Empty MediaWiki Message*

--- a/Liarabi.mw
+++ b/Liarabi.mw
@@ -1,3 +1,7 @@
-[[category:Lokótá]]
+
 '''Liarabi''' ezali lokótá elobami na bikolo mingi okati ya Asia-Pene (to Moyen Orient).
 {{ndambo}}
+
+
+[[category:Lokótá]]
+[[category:Nkotá ya mokili]]
