--- a/Mbóka-mokonzi.mw
+++ b/Mbóka-mokonzi.mw
@@ -6,6 +6,8 @@ Ekoki mpe kosalema tee ba provinsi, to biteni ya ndenge na ndenge okati ya ekolo
 
 i.e: [[Durban]] ezali engumba-mokonzi ya [[Kwazulu-Natal]], o ekolo ya Afrique du Sud.
 
+[[category:Leta]]
+
 [[en:capital city]]
 [[fr:capitale]]
 [[es:capital]]
